tests/e2e/semantics/dot_index_object2.story
http server as s
    when s listen path: "/" as r
        a = s.data["foobar"]
